[project]
name = "comma_body"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "charlesvardema", email = "charles.vardeman@gmail.com"},
]
dependencies = [
    "ollama>=0.2.0",
    "ipykernel>=6.29.4",
    "pillow>=10.3.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
